@@ -7,6 +7,7 @@ Default Qt Client
 - Updated Qt to 6.10.0 on Windows and macOS
 Android Client
 - Join last channel checkbox is now disabled by default in Server Properties Dialog
+- fixed the bug where status messages wouldn't be set at login sometimes
 iOS Client
 -
 Server
